--- a/app/design/frontend/pc/default/template/page/home/products.phtml
+++ b/app/design/frontend/pc/default/template/page/home/products.phtml
@@ -75,7 +75,7 @@
 
  <script>
         jQuery(document).ready(function(){
-            jQuery('.home_product').each(function() {
+            jQuery('.Hot_Selling_Products , .New_Arrival_Products').each(function() {
                 if(jQuery('.item', this).length > 0) {
                     jQuery(this).owlCarousel({
                         loop: true,
