--- a/app/design/frontend/pc/default/template/helpcenter/contact-us.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/contact-us.phtml
@@ -1,7 +1,7 @@
 <div class="help_right"><p><span style="font-size: medium;"><strong>Contact US</strong></span></p>
-    <p>Email:&nbsp;islambridal@aol.com
+    <p>Email: islambridal@hotmail.com
         <br><br>
         Office Hours: Monday to Friday-9:00 AM to 6:00 PM (GMT +08:00)
     </p>
     <p>For general information, such as buying process, payment methods, delivery options or dispute process, please refer to our related page.</p>
-    <p>If you need any inquiries with your recent orders, please contact Customer Service Center at islambridal@aol.com.</p></div>
+    <p>If you need any inquiries with your recent orders, please contact Customer Service Center at islambridal@hotmail.com.</p></div>
