--- a/app/design/frontend/pc/default/template/page/html/header.phtml
+++ b/app/design/frontend/pc/default/template/page/html/header.phtml
@@ -81,7 +81,7 @@
             </div>
             <div class="header_search"><?php echo $this->getChildHtml('topSearch') ?></div>
             <div class="header_cart">
-                <a href="<?php echo $this->getUrl('wishlist')?>" class="favor"><em>favor</em></a>
+                <a href="<?php echo $this->getUrl('wishlist')?>" class="favor"><em>&nbsp;</em></a>
                 <?php echo $this->getChildHtml('top.cart') ?>
             </div>
         </div>
