--- a/app/design/frontend/pc/default/template/page/html/top.cart.phtml
+++ b/app/design/frontend/pc/default/template/page/html/top.cart.phtml
@@ -5,7 +5,7 @@ if(empty($_cartQty)) {
 }
 ?>
 <a rel="nofollow" href="<?php echo $this->getUrl('checkout/cart')?>" class="bag">
-    <em>bag</em>
+    <em>&nbsp;</em>
     <span>Bag</span>
     <span> ( <span class="count"><?php echo $_cartQty; ?></span> ) </span>
 </a>
