--- a/skin/frontend/pc/default/scss/_header.scss
+++ b/skin/frontend/pc/default/scss/_header.scss
@@ -168,7 +168,7 @@
       a{
         display: inline-block;
         em{
-          text-indent: 9999px;
+          //text-indent: 9999px;
           display:inline-block;
         }
       }
