--- a/app/design/frontend/pc/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view.phtml
@@ -30,7 +30,11 @@
                 <div class="commont">
                     <?php echo $this->getReviewsSummaryHtml($_product, false, true)?>
                     <div class="ask-a-question"> |&nbsp; <a href="#askaquestion">Ask a question</a></div>
+                    <br/>
+                    <a class="share-reviews" href="<?php echo $this->getUrl('customers-feedback-gallery');?>">&gt;&gt;Share Reviews or Photos to Get $15 off Coupon</a>
                 </div>
+
+
 
                 <div class="product_price">
                     <?php echo $this->getPriceHtml($_product) ?>
