--- a/app/design/frontend/pc/default/template/catalog/product/view/description.phtml
+++ b/app/design/frontend/pc/default/template/catalog/product/view/description.phtml
@@ -1,4 +1,4 @@
-<?php $_description = $this->getProduct()->getDescription(); ?>
+<?php //$_description = $this->getProduct()->getDescription(); ?>
 <?php if ($_description): ?>
     <h3 class="hua"><?php echo $this->__('Description') ?></h3>
     <div class="std">
