--- a/skin/frontend/pc/default/scss/_header.scss
+++ b/skin/frontend/pc/default/scss/_header.scss
@@ -166,17 +166,17 @@
       text-align:right;
 
       a{
-        display: inline-block;
+        float:right;
         em{
           //text-indent: 9999px;
           display:inline-block;
         }
       }
       .favor{
-        background:url(../images/commont/favor.png) no-repeat;
-        width: 23px;
-        height: 22px;
+        width: 32px;
+        height: 32px;
         margin-right:30px;
+        background:url(../images/commont/favor.png) no-repeat;background-size:100% 100%;
       }
 
       .bag{
