--- a/skin/frontend/pc/default/scss/styles.css
+++ b/skin/frontend/pc/default/scss/styles.css
@@ -2455,9 +2455,9 @@ tr.summary-details-excluded { font-style: italic; }
 .new_header .header_content .header_logo a { display: block; text-align: center; height: 100%; }
 .new_header .header_content .header_logo a img { max-height: 112px; max-width: 100%; }
 .new_header .header_content .header_cart { float: left; height: 112px; width: 26.33%; padding: 55px 20px 0 0; text-align: right; }
-.new_header .header_content .header_cart a { display: inline-block; }
+.new_header .header_content .header_cart a { float: right; }
 .new_header .header_content .header_cart a em { display: inline-block; }
-.new_header .header_content .header_cart .favor { background: url(../images/commont/favor.png) no-repeat; width: 23px; height: 22px; margin-right: 30px; }
+.new_header .header_content .header_cart .favor { width: 32px; height: 32px; margin-right: 30px; background: url(../images/commont/favor.png) no-repeat; background-size: 100% 100%; }
 .new_header .header_content .header_cart .bag { line-height: 32px; color: #000; }
 .new_header .header_content .header_cart .bag em { background: url(../images/commont/bag.png) no-repeat; width: 32px; height: 32px; }
 .new_header .header_content .header_cart .bag .count { color: #de2489; }
@@ -2724,9 +2724,10 @@ tr.summary-details-excluded { font-style: italic; }
 .page .product_sort > a, .page .product_sort > span { display: block; float: left; border-right: 1px solid #ddd; padding: 0 15px; text-transform: capitalize; height: 42px; line-height: 42px; }
 .page .product_sort > a:hover, .page .product_sort > span:hover { background: #fff; color: #000; }
 .page .product_sort .on { background-color: #ab7505; color: #fff; font-weight: bold; }
+.page .product_discount { display: none; }
 .page .dress_list .products-grid { width: 100%; background: none; border: 0; }
 .page .dress_list .products-grid li.item { padding: 0; }
-.page .dress_list .products-grid li.item .item_deatil { margin: 3px; border: 2px solid #e9e9e9; border-radius: 3px; }
+.page .dress_list .products-grid li.item .item_deatil { position: relative; margin: 3px; border: 2px solid #e9e9e9; border-radius: 3px; }
 .page .dress_list .products-grid li.item .item_deatil:hover { border: 2px solid #ab7505; }
 .page .dress_list .products-grid li.item .product-image { width: 100%; padding-bottom: 133.333%; background-repeat: no-repeat; background-position: center center; background-size: 100%; border-radius: 3px; }
 .page .dress_list .products-grid li.item .product-image img { display: none; }
@@ -2739,6 +2740,10 @@ tr.summary-details-excluded { font-style: italic; }
 .page .dress_list .products-grid li.item .price-box .old-price .price { text-decoration: line-through; font-size: 12px; line-height: 12px; height: 13px; color: #999; font-weight: normal; }
 .page .dress_list .products-grid li.item .price-box .special-price .price { font-size: 14px; color: #ab7505; line-height: 18px; height: 18px; display: inline-block; }
 .page .dress_list .products-grid li.item .price-box .minimal-price-link .label, .page .dress_list .products-grid li.item .price-box .minimal-price-link .price { color: #ab7505; }
+.page .dress_list .products-grid li.item .price-box .product_discount { display: block; position: absolute; top: 0; right: 0; width: 50px; height: 50px; background: url(../images/commont/islam-discount.png) no-repeat; }
+.page .dress_list .products-grid li.item .price-box .product_discount span { text-align: center; color: #fff; width: 100%; float: left; }
+.page .dress_list .products-grid li.item .price-box .product_discount .discount_price { font-size: 20px; line-height: 21px; padding-top: 10px; }
+.page .dress_list .products-grid li.item .price-box .product_discount .discount_off { line-height: 13px; }
 .page .pagination ol { padding-top: 5px; height: 37px; font-size: 14px; text-align: center; }
 .page .pagination ol li { display: inline-block; vertical-align: middle; }
 .page .pagination ol li a { display: block; border: 1px solid #b1b1b1; height: 32px; line-height: 32px; padding: 0 12px; border-radius: 3px; vertical-align: top; background-color: #f7f7f7; background-image: linear-gradient(to bottom, #fff, #ececec); background-repeat: repeat-x; }
@@ -2798,6 +2803,7 @@ tr.summary-details-excluded { font-style: italic; }
 .page .product-view .product-shop .product-name h2 { text-transform: Capitalize; font-size: 15px; }
 .page .product-view .product-shop .commont { display: inline-block; width: 100%; line-height: 30px; margin-top: 10px; }
 .page .product-view .product-shop .commont a { text-decoration: underline; }
+.page .product-view .product-shop .commont a:hover { color: #ab7505; }
 .page .product-view .product-shop .commont .ratings, .page .product-view .product-shop .commont .no-rating { float: left; margin: 0; line-height: 30px; }
 .page .product-view .product-shop .commont .ratings .rating-box { margin-right: 5px; margin-top: 8px; }
 .page .product-view .product-shop .commont .ratings .rating-links { float: left; }
@@ -2865,7 +2871,8 @@ tr.summary-details-excluded { font-style: italic; }
 .page .product-view .new-product-collateral .box-collateral ul:after { display: block; content: "clear"; height: 0; clear: both; overflow: hidden; visibility: hidden; }
 .page .product-view .new-product-collateral .box-collateral ul li { float: left; padding: 10px; }
 .page .product-view .new-product-collateral .box-collateral ul li img { border: 1px solid #ccc; padding: 10px; display: block; margin: 0 auto; max-width: 600px; max-height: 800px; }
-.page .parent_cat_related .home_product dl { width: 16.6%; height: auto; padding: 0 3px; }
+.page .parent_cat_related .home_product dl { width: 16%; height: auto; padding: 0 1px; margin-left: 0.8%; }
+.page .parent_cat_related .home_product dl:first-child { margin-left: 0; }
 .page .parent_cat_related .home_product dl dt { margin: 0 auto 5px; width: 100%; height: auto; }
 .page .parent_cat_related .home_product dl dt a { width: 100%; }
 .page .parent_cat_related .home_product dl dt a img { max-width: 100%; max-height: none; }
