--- a/app/locale/en_US/template/email/html/header.html
+++ b/app/locale/en_US/template/email/html/header.html
@@ -18,7 +18,7 @@
                             <tr>
                                 <td style="font-family: Verdana, Arial; font-weight: normal; border-collapse: collapse; vertical-align: top; padding: 15px 0px 10px 5px; margin: 0;">
                                     <a href='{{store url=""}}' style="color: #3696c2; float: left; display: block;">
-                                        <img src="{{var logo_url}}" alt="{{var logo_alt}}" border="0" style="-ms-interpolation-mode: bicubic; outline: none; text-decoration: none;"/>
+                                        <img src="{{var logo_url}}" alt="{{var logo_alt}}" border="0" style="-ms-interpolation-mode: bicubic; outline: none; text-decoration: none;height: 130px;"/>
                                     </a>
                                 </td>
                                 <td style="font-family: Verdana, Arial;font-weight: normal;border-collapse: collapse;vertical-align: bottom;padding: 0 0 20px 0;margin: 0;text-align: right;">
