--- a/app/design/frontend/pc/default/template/page/html/header.phtml
+++ b/app/design/frontend/pc/default/template/page/html/header.phtml
@@ -97,17 +97,14 @@
                 <?php foreach($menu_tops as $menu):?>
                     <li>
                         <a href="<?php echo $menu->getUrl();?>"><?php echo $menu->getName();?></a>
-                        <div class="level2">
-                            <?php echo $this->getLayout()->createBlock('cms/block')
-                                ->setBlockId($menu->getUrlKey())
-                                ->toHtml() ?>
-                        </div>
+                        <div class="level2"><?php echo $this->getLayout()->createBlock('cms/block')->setBlockId($menu->getUrlKey())->toHtml() ?></div>
                     </li>
                 <?php endforeach;?>
             </ul>
             <script>
                 jQuery(".header_menu ul li").on('mouseover',function(){
                     var level2 = jQuery(this).find('.level2');
+                    if(level2.html().length==0){return false;}
                     level2.show();
                     if(jQuery(this).index()<3){
                         return false;
