--- a/app/design/frontend/pc/default/template/page/html/footer.phtml
+++ b/app/design/frontend/pc/default/template/page/html/footer.phtml
@@ -5,17 +5,17 @@
             <dl>
                 <dt>OUR COMMUNITY</dt>
                 <dd>
-                    <a href="https://www.pinterest.com/islambridal/">
+                    <a rel="nofollow" href="https://www.pinterest.com/islambridal/">
                         <img src="<?php echo $this->getUrl()?>/skin/frontend/pc/default/images/commont/Pinterest.jpg"/>
                     </a>
                 </dd>
                 <dd>
-                    <a href="https://www.facebook.com/islambridal/">
+                    <a rel="nofollow" href="https://www.facebook.com/islambridal/">
                         <img src="<?php echo $this->getUrl()?>/skin/frontend/pc/default/images/commont/facebook.gif"/>
                     </a>
                 </dd>
                 <dd>
-                    <a href="https://www.instagram.com/islambridal/">
+                    <a rel="nofollow" href="https://www.instagram.com/islambridal/">
                         <img src="<?php echo $this->getUrl()?>/skin/frontend/pc/default/images/commont/Instagram.jpg"/>
                     </a>
                 </dd>
