--- a/skin/frontend/pc/default/scss/_category.scss
+++ b/skin/frontend/pc/default/scss/_category.scss
@@ -472,6 +472,9 @@
           .review_info_1{font-weight:bold;padding-top:5px;}
           .review_info_2{font-size:10px;line-height:30px;}
           .review_info_3{line-height:15px;}
+          .review_info_4{
+            img{max-width:50px;max-height:50px;margin: 5px 5px 0 0;}
+          }
         }
       }
     }
