--- a/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
+++ b/app/design/frontend/pc/default/template/helpcenter/cancel-order.phtml
@@ -24,5 +24,5 @@
     of the product purchase price.</p>
     <p>- Orders canceled after 48 hours of payment confirmation will be eligible for a refund consisting of the full shipping cost only.</p>
     <p>- Once your order has been shipped, it can no longer be canceled.</p>
-    <p>For details, please submit your order number and contact our customer service staff at islambridal@hotmail.com.</p>
+    <p>For details, please submit your order number and contact our customer service staff at service@islambridal.com.</p>
 </div>
