--- a/app/design/frontend/pc/default/template/page/html/footer.phtml
+++ b/app/design/frontend/pc/default/template/page/html/footer.phtml
@@ -10,7 +10,7 @@
                     </a>
                 </dd>
                 <dd>
-                    <a rel="nofollow" href="https://www.facebook.com/islambridal/">
+                    <a rel="nofollow" href="https://www.facebook.com/Islambridalofficial">
                         <img src="<?php echo $this->getUrl()?>/skin/frontend/pc/default/images/commont/facebook.gif"/>
                     </a>
                 </dd>
